@@ -6,6 +6,9 @@
 * added warning in case of large entries in the
   inverse covariance matrix of crossVal
 
+* return original alleles in write.beagle, not
+  only "A" and "B" by default in the marker file
+
 
 
 0.9-4
